examples/pure/errors/assert3.sme
proc test ()
    const c: int = 0;
{
    assert("Assertion failed!");
}

network i () {
    instance _ of test ();
}
